src/test/resources/private/typechecking/fail/this/this_05_unknown.jova
class Helper {
}

class A {

    private int func1(int a, string b, bool c, Helper d,
                     int e, string f, bool g, Helper h) {
        this.a = a;
        this.b = b;
        this.c = c;
        this.d = d;
        this.e = e;
        this.f = f;
        this.g = g;
        this.h = h;

        return 0;
    }

    private int func2(int a, string b, bool c, Helper d,
                     int e, string f, bool g, Helper h) {
        a = this.a;
        b = this.b;
        c = this.c;
        d = this.d;
        e = this.e;
        f = this.f;
        g = this.g;
        h = this.h;

        return 0;
    }

}